Fix spacing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -289,8 +289,7 @@ footer {
 }
 
 .height-300 {
-  max-height: 300px;
-  max-width: 100%;
+  height: 300px;
 }
 
 .store {
@@ -315,11 +314,22 @@ footer {
   text-decoration: none;
 }
 
-.d-grid {
-  display: grid;
-  grid-template-columns: auto auto auto;
-  grid-gap: 50px;
-  text-align: center;
+@media only screen and (min-width: 1400px) {
+  .d-grid-desktop {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 20px;
+    text-align: center;
+  }
+}
+
+@media only screen and (min-width: 1000px) and (max-width: 1399px) {
+  .d-grid-desktop {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-gap: 20px;
+    text-align: center;
+  }
 }
 
 .min-2000 {
